--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,2 +1,23 @@
 @import "box_reset.scss";
 @import "reset.scss";
+@import "variables.scss";
+@import "mixins.scss";
+
+
+body {
+    min-height: 100vh;
+    font-family: $font;
+    font-size: 24px;
+    background-color: $primary-color;
+    @include centered-flex-item;
+}
+
+#wrapper {
+    max-width: 850px;
+    background-color: $secondary-color;
+    padding: 10px;
+}
+
+.footer{
+    font-size: 14px;
+}
