--- a/css/styles.css
+++ b/css/styles.css
@@ -62,12 +62,26 @@ table {
 
 body {
   min-height: 100vh;
-  font-family: "roboto", sans-serif;
+  font-family: "MedievalSharp", cursive;
   background-color: #293B5F;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+body p {
+  max-width: 60%;
+  margin: 0 auto;
+  padding: 8px 12px;
+  line-height: 1.4;
+  font-size: 22px;
+}
+
+img {
+  display: block;
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 #wrapper {
@@ -91,17 +105,19 @@ body {
 }
 
 .hangman-image-container img {
-  display: block;
   max-width: 80%;
   height: auto;
   margin: 0 auto;
 }
 
 #incorrect-guesses {
+  font-weight: bold;
+  font-size: 18px;
   text-align: center;
+  letter-spacing: 2px;
   padding: 10px;
   background-color: #E1E5EA;
-  max-width: 250px;
+  max-width: 300px;
   margin: 0 auto;
   border: 1px solid black;
   border-radius: 5px;
@@ -117,6 +133,7 @@ body {
 }
 
 #letters-container .alphabet {
+  font-family: "MedievalSharp", cursive;
   padding: 15px;
   margin: 5px;
   background-color: #E1E5EA;
@@ -126,14 +143,52 @@ body {
 }
 
 #letters-container .alphabet:hover {
-  box-shadow: 0 0 15px #5d5d5d;
-  border-radius: 0;
+  box-shadow: 0 0 10px #5d5d5d;
+  border-radius: 5px;
 }
 
 .footer {
+  font-family: "roboto", sans-serif;
   font-size: 14px;
   text-align: center;
   max-width: 500px;
   margin: 0 auto;
   padding: 10px;
+}
+
+#you-won,
+#you-lose {
+  padding: 15px;
+  text-align: center;
+}
+
+#you-won h2,
+#you-lose h2 {
+  font-size: 22px;
+  padding: 8px 12px;
+  margin-bottom: 8px;
+}
+
+#you-won p,
+#you-lose p {
+  max-width: 40%;
+  margin: 0 auto;
+  line-height: 1.5;
+  font-size: 22px;
+  letter-spacing: 1px;
+}
+
+#you-won button,
+#you-lose button {
+  margin-top: 10px;
+  border: none;
+  padding: 15px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+#you-won button:hover,
+#you-lose button:hover {
+  box-shadow: 0 0 10px #5d5d5d;
+  border-radius: 5px;
 }
