--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,10 +6,23 @@
 
 body {
     min-height: 100vh;
-    font-family: $font;
-    
+    font-family: $medievalFont;
     background-color: $primary-color;
     @include centered-flex-item;
+
+    p {
+        max-width: 60%;
+        margin: 0 auto;
+        padding: 8px 12px;
+        line-height: 1.4;
+        font-size: 22px;
+    }
+}
+
+img {
+    display: block;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 #wrapper {
@@ -32,7 +45,7 @@ body {
     padding: 10px;
 
     img {
-        display: block;
+        
         max-width: 80%;
         height: auto;
         margin: 0 auto;
@@ -43,10 +56,13 @@ body {
 
 
 #incorrect-guesses {
+    font-weight: bold;
+    font-size: 18px;
     text-align: center;
+    letter-spacing: 2px;
     padding: 10px;
     background-color: $secondary-color;
-    max-width: 250px;
+    max-width: 300px;
     margin: 0 auto;
     @include standard-border;
 }
@@ -61,6 +77,7 @@ body {
 
     .alphabet {
         
+        font-family: $medievalFont;
         padding: 15px;
         margin: 5px;
         background-color: $secondary-color;
@@ -70,15 +87,53 @@ body {
     }
 
     .alphabet:hover{
-        @include rounded-shaded-box(0,0,0,black)
+        @include rounded-shaded-box(0,0,5px,black)
     }
 
 }
 
 .footer{
+    font-family: $font;
     font-size: 14px;
     text-align: center;
     max-width: 500px;
     margin: 0 auto;
     padding: 10px;
 }
+
+#you-won,
+#you-lose{
+    padding: 15px;
+    text-align: center;
+
+    h2 {
+        font-size: 22px;
+        padding: 8px 12px;
+        margin-bottom: 8px;
+    }
+    
+    p {
+        max-width: 40%;
+        margin: 0 auto;
+        line-height: 1.5;
+        font-size: 22px;
+        letter-spacing: 1px;
+        
+    }
+
+    button {
+        margin-top: 10px;
+        border: none;
+        padding: 15px;
+        cursor: pointer;
+        font-size: 18px;
+        
+    }
+
+    button:hover {
+        @include rounded-shaded-box(0,0,5px,black);
+    }
+}
+
+
+
