--- a/css/styles.css
+++ b/css/styles.css
@@ -71,11 +71,11 @@ body {
 }
 
 body p {
-  max-width: 60%;
+  max-width: 80%;
   margin: 0 auto;
   padding: 8px 12px;
   line-height: 1.4;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 img {
@@ -160,6 +160,11 @@ img {
 #you-lose {
   padding: 15px;
   text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
 }
 
 #you-won h2,
