--- a/css/styles.scss
+++ b/css/styles.scss
@@ -11,11 +11,11 @@ body {
     @include centered-flex-item;
 
     p {
-        max-width: 60%;
+        max-width: 80%;
         margin: 0 auto;
         padding: 8px 12px;
         line-height: 1.4;
-        font-size: 22px;
+        font-size: 20px;
     }
 }
 
@@ -105,6 +105,11 @@ img {
 #you-lose{
     padding: 15px;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
 
     h2 {
         font-size: 22px;
