--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ body p {
 
 img {
   display: block;
-  max-width: 500px;
+  width: 600px;
   margin: 0 auto;
 }
 
@@ -106,7 +106,7 @@ img {
 
 .hangman-image-container img {
   max-width: 80%;
-  height: auto;
+  height: 350px;
   margin: 0 auto;
 }
 
@@ -120,13 +120,13 @@ img {
 }
 
 .word-container #hint {
-  font: 14px;
+  font: 8px;
   letter-spacing: 1px;
 }
 
 #incorrect-guesses {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 14px;
   text-align: center;
   letter-spacing: 2px;
   padding: 10px;
@@ -152,7 +152,6 @@ img {
   margin: 5px;
   background-color: #E1E5EA;
   border: none;
-  outline: none;
   cursor: pointer;
 }
 
@@ -173,12 +172,16 @@ img {
 #you-won,
 #you-lose {
   padding: 15px;
+  color: white;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: none;
+  background-color: rgba(105, 105, 105, 0.9);
+  height: 100%;
+  width: 100%;
 }
 
 #you-won h2,
@@ -197,10 +200,18 @@ img {
   letter-spacing: 1px;
 }
 
+#you-won img,
+#you-lose img {
+  width: 600px;
+  height: auto;
+}
+
 #you-won button,
 #you-lose button {
   margin-top: 10px;
-  border: none;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: #E1E5EA;
   padding: 15px;
   cursor: pointer;
   font-size: 18px;
@@ -210,4 +221,5 @@ img {
 #you-lose button:hover {
   box-shadow: 0 0 10px #5d5d5d;
   border-radius: 5px;
+  transform: scale(1.1);
 }
