--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,7 +21,7 @@ body {
 
 img {
     display: block;
-    max-width: 500px;
+    width: 600px;
     margin: 0 auto;
 }
 
@@ -47,7 +47,7 @@ img {
     img {
         
         max-width: 80%;
-        height: auto;
+        height: 350px;
         margin: 0 auto;
     }
     
@@ -63,7 +63,7 @@ img {
     }
 
     #hint {
-        font: 14px;
+        font: 8px;
         letter-spacing: 1px;
     }
 }
@@ -71,7 +71,7 @@ img {
 
 #incorrect-guesses {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 14px;
     text-align: center;
     letter-spacing: 2px;
     padding: 10px;
@@ -96,7 +96,6 @@ img {
         margin: 5px;
         background-color: $secondary-color;
         border: none;
-        outline: none;
         cursor: pointer;
     }
 
@@ -118,13 +117,16 @@ img {
 #you-won,
 #you-lose{
     padding: 15px;
+    color: white;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
-
+    background-color: rgba(105,105,105,0.9);
+    height: 100%;
+    width: 100%;
     h2 {
         font-size: 22px;
         padding: 8px 12px;
@@ -140,9 +142,15 @@ img {
         
     }
 
+    img {
+        width: 600px;
+        height: auto;
+    }
+
     button {
         margin-top: 10px;
-        border: none;
+        @include standard-border;
+        background-color: $secondary-color;
         padding: 15px;
         cursor: pointer;
         font-size: 18px;
@@ -151,6 +159,7 @@ img {
 
     button:hover {
         @include rounded-shaded-box(0,0,5px,black);
+        transform: scale(1.1);
     }
 }
 
