--- a/css/variables.scss
+++ b/css/variables.scss
@@ -6,4 +6,4 @@ $secondary-color: #E1E5EA;
 
 //font
 $font: "roboto", sans-serif;
-$medievalFont: 'MedievalSharp', cursive;
+$medievalFont: 'Yatra One', cursive;
